fix: prevent shadow being cut off in waves theme

--- a/packages/react-saasify/src/themes/waves.module.css
+++ b/packages/react-saasify/src/themes/waves.module.css
@@ -469,9 +469,9 @@ footer .link:hover {
   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='1440px' height='274px' viewBox='0 0 1440 274' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3C!-- Generator: Sketch 54.1 (76490) - https://sketchapp.com --%3E%3Ctitle%3EArtboard%3C/title%3E%3Cdesc%3ECreated with Sketch.%3C/desc%3E%3Cdefs%3E%3Cpath d='M1440,94.937049 L1440,274 L0,274 L0,68 C163.333342,95.1394992 375.993354,127.635219 637.980036,165.48716 C899.966717,203.339101 1167.30671,179.822397 1440,94.937049 Z' id='path-1'%3E%3C/path%3E%3Cfilter x='-5.7%25' y='-51.7%25' width='111.5%25' height='180.1%25' filterUnits='objectBoundingBox' id='filter-2'%3E%3CfeOffset dx='0' dy='-24' in='SourceAlpha' result='shadowOffsetOuter1'%3E%3C/feOffset%3E%3CfeGaussianBlur stdDeviation='23.5' in='shadowOffsetOuter1' result='shadowBlurOuter1'%3E%3C/feGaussianBlur%3E%3CfeColorMatrix values='0 0 0 0 0.889011549 0 0 0 0 0.889011549 0 0 0 0 0.889011549 0 0 0 0.5 0' type='matrix' in='shadowBlurOuter1'%3E%3C/feColorMatrix%3E%3C/filter%3E%3C/defs%3E%3Cg id='Artboard' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='Combined-Shape'%3E%3Cuse fill='black' fill-opacity='1' filter='url(%23filter-2)' xlink:href='%23path-1'%3E%3C/use%3E%3Cuse fill='%23FFFFFF' fill-rule='evenodd' xlink:href='%23path-1'%3E%3C/use%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   background-position: center;
   background-size: cover;
-  bottom: -100px;
+  bottom: -120px;
   content: '';
-  height: 184px !important;
+  height: 260px !important;
   left: 0;
   position: absolute;
   width: 100vw;
@@ -491,7 +491,7 @@ footer .link:hover {
 }
 
 .pricing-section::after {
-  top: calc(50% + 100px);
+  top: calc(50% + 60px);
 }
 
 .pricing-section .title {
